--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ body{
 	font-family: Arial, Helvetica, sans-serif;
     margin: 12px 40px 12px 40px;
     padding: 2px 10px;
+    display: flex;
+    justify-content: center;
    
 }
 
